<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="description_title">Description</string>
    <string name="release_date_title">Release Date</string>
    <string name="rating_title">User Rating</string>
    <string name="videos_title">Trailers</string>
    <string name="reviews_title">Reviews</string>
    <string name="backdrop">Backdrop</string>
    <string name="poster">Poster</string>
    <string name="play">Play</string>
    <string name="trailer">Trailer</string>
    <string name="favorite">Add to Favorites</string>
    <string name="unfavorite">Remove from Favorites</string>
    <string name="Data_Not_Found">Movie data is not available.</string>
    <string name="api_key">8a6f42fe5f7efc6139cda365db5c89a1</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_prod">ca-app-pub-8379108590476103/6792594439</string>
    <string name="admob_app_id">ca-app-pub-8379108590476103~9690220517</string>

    <string-array name="sort_options">
        <item>Popular Movies</item>
        <item>Top Rated Movies</item>
        <item>Favorite Movies</item>
    </string-array>
</resources>
