<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="200dp"
                android:layout_height="336dp"
                android:adjustViewBounds="false"
                android:cropToPadding="true"
                android:contentDescription="TODO" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/release_date_heading"
                    android:layout_width="170dp"
                    android:layout_height="25dp"
                    android:padding="4dp"
                    android:text="@string/release_date_title"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="170dp"
                    android:layout_height="25dp"
                    android:textColor="@android:color/black"
                    android:padding="4dp" />
                <TextView
                    android:id="@+id/rating_heading"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:padding="4dp"
                    android:text="@string/rating_title"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"  />
                <RatingBar
                    android:id="@+id/rating"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="165dp"
                    android:layout_height="25dp"
                    android:numStars="10"
                    android:padding="4dp" />
                <TextView
                    android:id="@+id/movie_description_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/description_title"/>
                <TextView
                    android:id="@+id/movie_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:padding="4dp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/videos_heading"
                android:layout_width="170dp"
                android:layout_height="25dp"
                android:padding="4dp"
                android:text="@string/videos_title"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/videos"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:textColor="@android:color/black"
                android:padding="4dp" />
            <TextView
                android:id="@+id/reviews_heading"
                android:layout_width="170dp"
                android:layout_height="25dp"
                android:padding="4dp"
                android:text="@string/reviews_title"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/reviews"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:textColor="@android:color/black"
                android:padding="4dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>